tools/tests/errors/hasattr_bad_name.ki
var x = 5
hasattr(x, 42)
